data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1311.wast
;; 2.  *Test Description*: Verify a scenario where a branch targets a block label within an exporting module, which in turn imports another function and performs a branch.     *Constraint Being Checked*: Ensures that the control instructions correctly maintain and restore the stack across nested imports and exports, preventing any mismanagement of the operand stack.

(assert_invalid
  (module
    (import "env" "externalFunction" (func $externalFunction (result i32)))
    (func $test
      (block (result i32)
        (call $externalFunction)
        (br 0 (i32.const 42))
      )
      (drop)
    )
    (export "test" (func $test))
  )
  "type mismatch"
)